Use winflexbison as provider for flex/bison on Windows

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,8 +17,9 @@ build:
 requirements:
   build:
     - {{ compiler('cxx') }}
-    - bison
-    - flex
+    - winflexbison  # [win]
+    - bison  # [unix]
+    - flex   # [unix]
     - autotools_clang_conda  # [win]
     - libtool   # [unix]
     - automake  # [unix]
