--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -17,7 +17,8 @@ build:
 requirements:
   build:
     - {{ compiler('cxx') }}
-    - winflexbison  # [win]
+    - m2-bison  # [win]
+    - m2-flex   # [win]
     - bison  # [unix]
     - flex   # [unix]
     - autotools_clang_conda  # [win]
